fix header height restriction and overflow

--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -3,6 +3,7 @@
 html {
     font-size: 125%;
     scroll-behavior: smooth;
+    width: 100%;
 }
 
 body {
