--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -83,10 +83,6 @@ nav {
   margin-left: 13px;
 }
 
-header {
-  max-height: 150vh;
-}
-
 .intro {      
   max-height: 100%;
 
@@ -175,7 +171,7 @@ header {
 
 .about {
   padding: 20px;
-  margin: 50px auto;
+  margin: 50px auto 0px auto;
 }
 
 .skills {
